<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_ChangeAxisEnable" Id="{429990be-8b42-404b-9853-8c5cb80d2e57}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ChangeAxisEnable EXTENDS ST_MsgToPLC:
STRUCT
    nAxisIndex	: DINT;
    bEnabled	: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>