<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_ChangeBrakeState" Id="{cb3a48a9-4910-4d91-97e7-6ff51abecd56}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_ChangeBrakeState EXTENDS ST_MsgToPLC:
STRUCT
	axisIndex	: DINT;
    state		: BOOL; (* TRUE=Disengaged, FALSE=Engaged *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>